test/expressions/bitshift/checks/bitshiftLargerThanNumBits.0.good
bitshiftLargerThanNumBits.chpl:8: error: halt reached - Cannot bitshift 128 by 64 because 64 is >= the bitwidth of int(64)
